--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ go:
 - '1.8.1'
 install:
   - go get -u github.com/golang/dep
+  - which dep
+  - ls $GOPATH/bin
+  - ls -alih
   - $GOPATH/bin/dep ensure
   - go build
 deploy:
