--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: go
 go:
 - '1.8.1'
 install:
-  - go get -u github.com/golang/dep
+  - go get -u github.com/golang/dep/...
   - ls $GOPATH/bin
   - ls -alih
   - $GOPATH/bin/dep ensure
